# ChangeLog for app-admin/clsync
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Sep 2013; Andrew Savchenko <bircoph@gmail.com> files/clsync.initd:
  Remove tread killer hack, because bug #44 was fixed.

  21 Sep 2013; Andrew Savchenko <bircoph@gmail.com> files/clsync.initd:
  Terminate clsync offsprings which are still alive after clsync
  termination. clsync send signals to its childs, but not to further
  offsprings (grandchildren and so on), so this offsprings may not
  die properly in childs doesn't handle this. Thus sophisticated
  measures are required for cleanup.

  20 Sep 2013; Andrew Savchenko <bircoph@gmail.com> clsync-9999.ebuild,
  files/clsync.confd, files/clsync.initd:
  Depend mhash on clsync. Inform users about multiplexed init script.
  Update options names. Add nice, ionice and retry support.

  16 Sep 2013; Andrew Savchenko <bircoph@gmail.com> clsync-9999.ebuild,
  +files/clsync-0.1.confd, +files/clsync-0.1.initd,  +files/clsync.conf,
  files/clsync.confd, files/clsync.initd:
  Add config file support. For v0.1 use old init.d/conf.d because
  v0.1 doesn't support config files.

  13 Sep 2013; Andrew Savchenko <bircoph@gmail.com> files/clsync.initd:
  Remove non-standard retry approach, this bug is fixed now.
  Add syslog support.

  09 Sep 2013; Andrew Savchenko <bircoph@gmail.com> clsync-9999.ebuild:
  Force 0700 permissions or /etc/clsync. License update. Conf.d
  recommendations update.

*clsync-0.1 (07 Sep 2013)

  07 Sep 2013; Andrew Savchenko <bircoph@gmail.com> +clsync-0.1.ebuild,
  clsync-9999.ebuild, +files/clsync.confd, +files/clsync.initd, metadata.xml:
 Version bump for 0.1 release. Add capabilities support. Install
 init script and conf file. Keep config directory: rules are
 supposed to be here. Add rsync hinting information.

  26 Aug 2013; Andrew Savchenko <bircoph@gmail.com> clsync-9999.ebuild,
  metadata.xml:
  Add mhash and clustering support.
