@@ -1,13 +1,0 @@
-#!/sbin/runscript
-# Copyright 1999-2013 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-command="/usr/bin/clsync"
-pidfile="/var/run/${SVCNAME}.pid"
-command_args="--background --syslog --pid-file=${pidfile} ${CLSYNC_OPTS}"
-retry=5
-
-depend() {
-	use net
-}
